# desg-of-senio

./: .gitignore  2  README.md
Kicad/Circ case/: Bottomprint.gcode  Case.ipt  Circ case assembly.iam  board.ipt  bottom.ipt  bottom.stl  bottomv4.stl  bottomv5.stl  bottomv6.stl  top.stl  topv3.stl  topv4.stl
Kicad/Final Circ/: FinalCircuit-rescue.lib  FinalCircuit.sch  _autosave-FinalCircuit.sch  sym-lib-table
Kicad/Parts to order/: Parts for senior design.xlsx
Kicad/SDPowSupply/: POWSYMBOLS.dcm  SDPowSupply-cache.lib  SDPowSupply-rescue.lib  SDPowSupply.pro  SDPowSupply.sch  sym-lib-table
SolidWorks/: mains_plug_faceplate.SLDPRT  mains_plug_faceplate.STL
SolidWorks/Clamping_stuff/: Better_Bolt.SLDPRT  Bottom_Clamp.SLDPRT  Coupler.SLDPRT  Top_Clamp.SLDPRT
SolidWorks/Double_Screw_Clamp/: Better_Bolt.SLDPRT  Bottom_Clamp.SLDPRT  DSC_ - Large_Gear_3-1.STL  DSC_ - Large_Gear_3-2.STL  DSC_ - Motor_Mount_Small-1.STL  DSC_ - New_plate_bottom_2-1.STL  DSC_ - Nolan_Top_Clamp-1.STL  DSC_ - Nolan_better_bolt-3.STL  DSC_ - Nolan_better_bolt-4.STL  DSC_ - Revolver_rev_2_2-1.STL  DSC_ - Top_Bar_Motor_Mount-1.STL  DSC_ - nolan_bottom_clamp-1.STL  DSC_ - spur gear_ai-1.STL  DSC_ - spur gear_ai-4.STL  DSC_ - spur gear_ai-5.STL  DSC_ - stand_auto_coffee-1.STL  Double_Screw_Clamp_Assy - Motor_Gear_3-1.STL  Double_Screw_Clamp_Assy - Motor_Mount_Small-1.STL  Double_Screw_Clamp_Assy - New_plate_bottom_2-1.STL  Double_Screw_Clamp_Assy - Nolan_Top_Clamp-1.STL  Double_Screw_Clamp_Assy - Nolan_better_bolt-3.STL  Double_Screw_Clamp_Assy - Nolan_better_bolt-4.STL  Double_Screw_Clamp_Assy - Revolver_rev_2_2-1.STL  Double_Screw_Clamp_Assy - Top_Bar_Motor_Mount-1.STL  Double_Screw_Clamp_Assy - nolan_bottom_clamp-1.STL  Double_Screw_Clamp_Assy - spur gear_ai-1.STL  Double_Screw_Clamp_Assy - spur gear_ai-2.STL  Double_Screw_Clamp_Assy - spur gear_ai-3.STL  Double_Screw_Clamp_Assy - spur gear_ai-4.STL  Double_Screw_Clamp_Assy - stand_auto_coffee-1.STL  Double_Screw_Clamp_Assy.SLDASM  Large_Gear.SLDPRT  Large_Gear_1.SLDPRT  Large_Gear_2.SLDPRT  Large_Gear_3.SLDPRT  Large_Gear_3.STL  Middle_Gear.SLDPRT  Middle_Gear_1.SLDPRT  Middle_Gear_1.STL  Motor_Gear.SLDPRT  (+24 more)
SolidWorks/Lever_Clamp_Nolan/: Arm_Seperator.DXF  Arm_Seperator.SLDPRT  Arms - Copy.DXF  Arms - Copy.SLDPRT  Arms.DXF  Arms.SLDPRT  Bottom_Component_Plate.DXF  Bottom_Component_Plate.SLDPRT  (+6 more)
designs/: Board_Level_Diagram_.uxf  CapabilitiesCompiler.uxf  HighLevelComponants.uxf  MessageSystem.uxf  Messaging Queue UML.uxf  ServerMessaging.uxf  website-design.md
generic_automation/: setup.ps1
generic_automation/exec/MessageStructureTests/: meson.build
generic_automation/exec/MessageStructureTests/src/: main.cpp
generic_automation/exec/Website/test/: CMakeLists.txt  meson.build
generic_automation/lib/Common/: CMakeLists.txt  HexStringSerializer.hpp  Map.hpp  Message.cpp  MessageId.cpp  MessageId.hpp  MessageSerializer.hpp  RawByteSerializer.hpp  StaticAllocator.hpp  StepperMotorMessage.cpp  StepperMotorMessage.hpp  StringBuilder.cpp  Subscriber.hpp  meson.build
generic_automation/lib/Common/include/: AnalogMessage.hpp  BufferQueue.hpp  ButtonMessage.hpp  Capabilities.hpp  DebugDevice.hpp  Defines.hpp  Device.hpp  EncoderMessage.hpp  HexStringSerializer.hpp  List.hpp  Log.hpp  Map.hpp  Message.hpp  MessageBuffer.hpp  MessageId.hpp  MessageParser.hpp  MessageSender.hpp  MessageSerializer.hpp  MessageTypeRegistry.hpp  PwmMessage.hpp  RawByteSerializer.hpp  Router.hpp  SimpleMessages.hpp  StaticAllocator.hpp  StaticList.hpp  StaticQueue.hpp  StepperMotorMessage.hpp  StringBuilder.hpp  SubscribeMessage.hpp  SubscribeRequestMessage.hpp  Subscriber.hpp  SwitchMessage.hpp  Timer.hpp  TypedHexStringSerializer.hpp  Types.hpp
generic_automation/lib/Common/src/: AnalogMessage.cpp  ButtonMessage.cpp  Capabilities.cpp  DebugDevice.cpp  Device.cpp  EncoderMessage.cpp  HexStringSerializer.cpp  Message.cpp  MessageId.cpp  PwmMessage.cpp  Router.cpp  SimpleMessages.cpp  StepperMotorMessage.cpp  StringBuilder.cpp  SubscribeManager.cpp  SubscribeMessage.cpp  Subscriber.cpp  SwitchMessage.cpp  Timer.cpp
generic_automation/lib/MessageStructure/: meson.build
generic_automation/lib/MessageStructure/include/: HexStringSerializer.hpp  Message.hpp  MessageSerializer.hpp  Publisher.hpp  StepperMotorMessage.hpp
generic_automation/lib/MessageStructure/make/: CMakeLists.txt
generic_automation/lib/MessageStructure/src/: Message.cpp  StepperMotorMessage.cpp
generic_automation/lib/StringManipulation/: meson.build
generic_automation/lib/StringManipulation/include/: StringBuilder.hpp
generic_automation/lib/StringManipulation/src/: StringBuilder.cpp
(+343 files in other folders)
