project('Website_test', 'cpp', default_options : ['default_library=static'])
PROJECT_NAME_exe = executable(project_name, 'test_main.cc')
# ##############################################################################
# If you include the drogon source code locally in your project, use this method
# to add drogon 
# target_link_libraries(${PROJECT_NAME}_test PRIVATE drogon)
#
# and comment out the following lines
# target_link_libraries([project_name, 'PRIVATE', 'Drogon::Drogon'])
# parseandadddrogontests(project_name)
